@@ -143,6 +143,14 @@ PANOPTICON_MFA_SUPERUSER=false
 # participation.
 PANOPTICON_MFA_ADMIN=false
 
+# Maximum MFA tries
+# The maximum number of MFA login attempts a user has before they are logged
+# out of the application. This is meant to slow down attackers to the point
+# they cannot simply “guess” an authenticator code within the 90 seconds time
+# window. Passkeys are generally immune to such attacks, but we apply this
+# setting on them as well for consistency reasons.
+PANOPTICON_MFA_MAX_TRIES=3
+
 # Automatic IP block on failed login attempts
 # Set to true to have Panopticon automatically block an IP address if more than
 # a certain number of failed login attempts come from it in a specific period.
