@@ -191,6 +191,7 @@ PANOPTICON_BTN_BATCH="Batch"
 PANOPTICON_APP_MENU_TITLE_ADMINISTRATION="Administration"
 PANOPTICON_APP_TEMPLATE_DEFAULT="Panopticon (Default Template)"
 PANOPTICON_APP_LBL_LANGUAGE="Language"
+PANOPTICON_APP_ERR_MFA_LOGOUT="Too many failed Multi-factor Authentication attempts. Please retry logging in."
 
 [Task Types]
 PANOPTICON_TASKTYPE_AKEEBABACKUP="Take a backup with Akeeba Backup"
@@ -1450,6 +1451,7 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_SUPERUSER="Force MFA for Superusers"
 PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_ADMIN="Force MFA for Administrators"
 PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_FORCE_GROUPS="Force MFA for these Groups"
 PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_COUNTS_AS_LOGIN_FAILURE="MFA failure counts as login failure"
+PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_MAX_TRIES="Maximum MFA tries"
 
 [Tasks]
 PANOPTICON_TASKS_TITLE="Tasks"
